# multia-finos

./: .env.example  .gitignore  main.py  pyproject.toml
config/: agent-registry.yaml  mcp-registry.yaml  policies.yaml  run.yaml  scoring-functions.yaml  tool-policies.yaml
data/: comparables.json  mcp_funding_data.json  mcp_market_sentiment.json  pii_patterns.json  risk_templates.json
data/knowledge/: market_sizing.txt  risk_frameworks.txt  startup_metrics.txt
docs/: architecture.md  finos-evolution-plan.md
examples/: 01_hello_agent.py  02_agent_with_tools.py  03_two_agent_handoff.py  04_full_pipeline.py  05_streaming.py  06_with_rag.py  07_responses_api.py  09_gateway.py  10_policy_enforcement.py  11_secure_pipeline.py  12_sanitization.py  13_tool_governance.py  14_observability.py  15_evaluation.py  16_persistent_state.py  17_audit_trail.py  18_mcp_tools.py
scripts/: check_deps.sh  install_client.sh  install_server.sh  pull_models.sh  start_gateway.sh  start_mcp_demo.sh  start_server.sh  view_traces.py
src/: client.py  config.py  pipeline.py  pipeline_secure.py  state.py  streaming.py
src/agents/: base.py  coordinator.py  finance_agent.py  market_agent.py  risk_agent.py  tech_agent.py  validator.py
src/evaluation/: bias_detector.py  evaluator.py  scoring_setup.py
src/gateway/: rate_limiter.py  schemas.py  server.py
src/governance/: audit.py  compliance_report.py  policy.py  registry.py  tool_governance.py  (+1 more)
tests/: conftest.py  test_audit.py  test_gateway.py  test_governance.py  test_mcp.py  test_observability.py  test_security.py  test_tools.py
(+17 files in other folders)
